# task-4-c

./: CMakeLists.txt  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  README.md  TextProcessor.cpp  TextProcessor.h  TextProcessorTests.cpp  main.cpp
